--- a/kcbq-connector/pom.xml
+++ b/kcbq-connector/pom.xml
@@ -29,6 +29,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <?m2e execute onConfiguration?>
         <groupId>com.wepay.kcbq</groupId>
         <artifactId>kcbq-parent</artifactId>
         <version>2.11.0-SNAPSHOT</version>
